# bridging_optimizers

./: .gitignore  README.md  evaluate_brax.py  pyproject.toml  train_bbo.py  train_brax.py  utils.py
.devcontainer/: Dockerfile  devcontainer.json
evosax/: __init__.py
evosax/core/: fitness.py
evosax/strategies/: AdaPol_ccbo_ovi.py  AdaPol_pcbo_ovi.py  __init__.py  clustered_cbo.py  es_ovi.py  open_es.py  optimization_via_integration.py  polarized_cbo.py
evosax/utils/: visualizer_2d.py
