[project]
name = "bridging_optimizers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "brax<=0.12.3",
    "chex>=0.1.89",
    "cma>=4.0.0",
    "debugpy>=1.8.14",
    "dm-tree>=0.1.10",
    "einops>=0.8.2",
    "flax>=0.10.6",
    "jax<=0.7.0",
    "lm-eval",
    "matplotlib>=3.10.1",
    "moviepy>=2.2.1",
    "pytest>=8.3.5",
    "tensorboardx>=2.6.2.2",
    "tyro>=0.9.19",
    "tzdata>=2026.2",
    "wandb>=0.19.10",
]

[tool.uv]
required-environments = [
  "sys_platform == 'linux' and platform_machine == 'aarch64'",
]
[tool.pytest.ini_options]
pythonpath = [
  "."
]
addopts = "--capture=tee-sys"
env = [
  "RAY_DEBUG_POST_MORTEM = 0"
]
